--- a/src/app/articles/rewriting-the-cosmos-kernel-in-rust/page.mdx
+++ b/src/app/articles/rewriting-the-cosmos-kernel-in-rust/page.mdx
@@ -3,9 +3,9 @@ import { ArticleLayout } from '@/components/ArticleLayout'
 export const article = {
   author: 'Adam Wathan',
   date: '2022-07-14',
-  title: 'Rewriting the cosmOS kernel in Rust',
+  title: 'Aspectos nutricionais relacionados ao ciclo menstrual',
   description:
-    'When we released the first version of cosmOS last year, it was written in Go. Go is a wonderful programming language, but it’s been a while since I’ve seen an article on the front page of Hacker News about rewriting some important tool in Go and I see articles on there about rewriting things in Rust every single week.',
+    'O objetivo da presente revisão é apresentar os principais tópicos discutidos na literatura quanto à associação da nutrição com o ciclo menstrual, contribuindo para a implementação do atendimento nutricional de mulheres.',
 }
 
 export const metadata = {
