--- a/src/app/articles/crafting-a-design-system-for-a-multiplanetary-future/page.mdx
+++ b/src/app/articles/crafting-a-design-system-for-a-multiplanetary-future/page.mdx
@@ -3,10 +3,9 @@ import designSystem from './planetaria-design-system.png'
 
 export const article = {
   author: 'Adam Wathan',
-  date: '2022-09-05',
-  title: 'TESTE TITULO',
-  description:
-    'TESTE DESCRICAO',
+  date: '2024-09-05',
+  title: 'Conceitos de mulheres sobre sua menstruação',
+  description:'Dando prosseguimento às pesquisas anteriores realizadas pelo Núcleo de de Assistência para o Autocuidado da Mulher (NAAM) sobre aspectos relativos à menstruação,',
 }
 
 export const metadata = {
