--- a/src/app/articles/introducing-animaginary/page.mdx
+++ b/src/app/articles/introducing-animaginary/page.mdx
@@ -2,10 +2,10 @@ import { ArticleLayout } from '@/components/ArticleLayout'
 
 export const article = {
   author: 'Adam Wathan',
-  date: '2022-09-02',
-  title: 'Introducing Animaginary: High performance web animations',
+  date: '2024-09-02',
+  title: 'O tabu que cerca a menstruação torna mais difíceis estudos acerca dos transtornos associados a ela, como a endometriose.',
   description:
-    'When you’re building a website for a company as ambitious as Planetaria, you need to make an impression. I wanted people to visit our website and see animations that looked more realistic than reality itself.',
+    'Menstruar é uma característica humana, raríssima entre os mamíferos. Menstruam as mulheres, “as” chimpanzés, as fêmeas de algumas espécies de morcegos e do musaranho-elefante, animal africano do tamanho de um rato.',
 }
 
 export const metadata = {
